[tool.poetry]
name = "story-arcs"
version = "0.1.0"
description = ""
authors = ["Hugh Cunningham <hugh.e.cunningham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^3.0.2"
matplotlib = "^3.3.1"
torch = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
